[tool.poetry]
name = "wixxcontainer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dhooks = "^1.1.4"
rblxpy = "^0.0.2"
hathor = "^0.0.11-alpha.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
